--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "eve-icons-react",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "description": "EVE Online icons for React with CSS filter support",
+  "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -13,6 +14,7 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "generate-icons": "node scripts/generate-icons.js",
+    "generate-pages": "node scripts/generate-icon-pages.js",
     "prepublishOnly": "npm run generate-icons && npm run build"
   },
   "keywords": [
@@ -25,14 +27,14 @@
   "author": "",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-image": "^3.0.3",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
-    "@types/react": "^18.2.45",
-    "react": "^18.2.0",
+    "@types/react": "^19.0.0",
+    "react": "^19.2.3",
     "rollup": "^4.9.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "tslib": "^2.6.2",
